# 3DGVRT_lightfield

./: .gitignore  CMakeLists.txt  README.md
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/projects/VulkanFullRT/: CMakeLists.txt  build.gradle
android/projects/VulkanFullRT/src/main/: AndroidManifest.xml
android/projects/VulkanFullRT/src/main/java/sogang/graphics/vulkanfullrt/: VulkanActivity.java
android/projects/VulkanHybrid/: CMakeLists.txt  build.gradle
android/projects/VulkanHybrid/src/main/: AndroidManifest.xml
android/projects/VulkanHybrid/src/main/java/sogang/graphics/vulkanhybrid/: VulkanActivity.java
android/projects/_template/: CMakeLists.txt  build.gradle
android/projects/_template/src/main/: AndroidManifest.xml
android/projects/base/: CMakeLists.txt
base/: AABB_Clipping.h  CMakeLists.txt  Define.h  LoadCamera.hpp  SceneObjectManager.cpp  SceneObjectManager.h  SimpleUtils.cpp  SimpleUtils.h  Vulkan3DGRTModel.cpp  Vulkan3DGRTModel.h  VulkanAndroid.h  VulkanDevice.cpp  VulkanDevice.h  VulkanRTBase.cpp  VulkanRTBase.h  VulkanRTCommon.cpp  VulkanRTCommon.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanUtils.cpp  VulkanUtils.h  VulkanglTFModel.cpp  VulkanglTFModel.h  benchmark.hpp  camera.hpp  cameraQuaternion.hpp  keycodes.hpp
projects/: CMakeLists.txt
projects/VulkanFullRT/: SplitBLAS.cpp  SplitBLAS.hpp  VulkanFullRT.cpp
projects/VulkanHybrid/: VulkanHybrid.cpp
results/evaluations/: eval_quality.py  readme.txt  rename.py
shaders/glsl/VulkanDeferred/: VulkanDeferredCompile.bat  deferred.frag
shaders/glsl/VulkanDeferredRayQuery/: deferred.frag  mrt.frag  mrt.vert
shaders/glsl/VulkanFullRT/: VulkanFullRTCompile.bat  anyhit.rahit  closesthit.rchit  compute.comp  miss.rmiss  particlePrimitives.comp  particleRendering.comp  raygen.rgen  raygenGaussianLightField.rgen  shadow.rchit  shadow.rmiss
shaders/glsl/VulkanFullRT/unused/: closesthitCuboid.rchit  closesthitReflection.rchit  closesthitReflectionSphere.rchit  closesthitTransmission.rchit  closesthitTransmissionSphere.rchit  cuboidIntersection.rint  sphereIntersection.rint
shaders/glsl/VulkanFullRayQuery/: VulkanFullRayQueryCompile.bat  fullrq.frag  fullrq.vert
shaders/glsl/VulkanHSLightOptimization/: VulkanHSLightOptimizationCompile.bat  anyhit.rahit  closesthit.rchit  deferred.frag  deferred.vert  miss.rmiss  mrt.frag  mrt.vert  pointshadowmap.frag  pointshadowmap.geom  pointshadowmap.vert  raygen.rgen  shadow.rmiss  shadowmap.frag  shadowmap.vert  stencil.frag  stencil.vert
shaders/glsl/VulkanHybrid/: VulkanHybridCompile.bat  anyhit.rahit  closesthit.rchit  miss.rmiss  mrt.frag  mrt.vert  raygen.rgen  shadow.rchit  shadow.rmiss
shaders/glsl/VulkanHybridShadowmap/: VulkanHybridShadowmapCompile.bat  anyhit.rahit  closesthit.rchit  mrt.frag  mrt.vert  pointshadowmap.geom  pointshadowmap.vert  raygen.rgen
shaders/glsl/VulkanHybridShadowmap/unused/: closesthitTransmission.rchit
shaders/glsl/VulkanHybridShadowmapRayQuery/: VulkanHybridShadowmapRayQueryCompile.bat  deferred.frag  mrt.frag  mrt.vert
shaders/glsl/VulkanLightOptimization/: accum.frag  accum.vert  closesthit.rchit  miss.rmiss  raygen.rgen
shaders/glsl/VulkanLightOptimizationRayQuery/: VulkanLightOptimizationRayQueryCompile.bat  accum.frag  accum.vert  deferred.frag  deferred.vert  mrt.vert
shaders/glsl/VulkanStencil/: VulkanStencilCompile.bat  anyhit.rahit  closesthit.rchit  mrt.frag  mrt.vert  raygen.rgen  shadow.rchit
shaders/glsl/base/: 3dgs.glsl  baseCompile.bat  bufferreferences.glsl  define.glsl  gaussianfunctions.glsl  geometryfunctions.glsl  geometrytypes.glsl  light.glsl  pbr.glsl  utils.glsl
